@@ -4,6 +4,8 @@ version 1.3
 	* Changed the format of the XML reports to something that
 	  is hopefully easier to use and more natural.  This
 	  unfortunately breaks backward compatability.
+	* Added the ability to specify the location of the coverage
+	  data files.
 
 version 1.2
 	* Fix a bug that caused the XML reports to be invalid XML
